--- a/Cyiwdio/public/index.html
+++ b/Cyiwdio/public/index.html
@@ -10,7 +10,7 @@
 <meta property="og:url" content="http://localhost:1313/">
   <meta property="og:site_name" content="Cyiwdio">
   <meta property="og:title" content="Cyiwdio">
-  <meta property="og:description" content="I Warned You About Cyiwdio">
+  <meta property="og:description" content="I Warned You About Cyiwdio Enjoy">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -48,6 +48,8 @@
             
             <p class="lh-lg">
                 <h1 id="i-warned-you-about-cyiwdio">I Warned You About Cyiwdio</h1>
+<p>Enjoy</p>
+<!-- raw HTML omitted -->
 
             </p>
         </div>
