--- a/Cyiwdio/public/404.html
+++ b/Cyiwdio/public/404.html
@@ -16,7 +16,7 @@
 
       <link rel="stylesheet" href="/css/main.min.6a5d060cc99abe2eac21ab99b4bf9d09ff11152ef6e596d5c6a4c559f09fab94.css" integrity="sha256-al0GDMmavi6sIauZtL&#43;dCf8RFS725ZbVxqTFWfCfq5Q=" crossorigin="anonymous">
   
-        <link rel="stylesheet" href="/css/palette/default.min.1f4f879ab4dcacd067f6d2115a4c8e395e12d39edb7ef15e09f0efca569b967d.css" integrity="sha256-H0&#43;HmrTcrNBn9tIRWkyOOV4S057bfvFeCfDvylabln0=" crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/palette/catpuccin.min.e2839e7c321b1899e8f752c4744a0d53a16a68d46c4cbccc7f4e41f6ef6d2667.css" integrity="sha256-4oOefDIbGJno91LEdEoNU6FqaNRsTLzMf05B9u9tJmc=" crossorigin="anonymous">
 
       <script src="/js/main.86bb3d8e6f46df0fc97c2731e6b99175a13b87a4086acf578ff9b6992fcf32c1.js" integrity="sha256-hrs9jm9G3w/JfCcx5rmRdaE7h6QIas9Xj/m2mS/PMsE=" crossorigin="anonymous"></script>
 
