--- a/Cyiwdio/public/index.html
+++ b/Cyiwdio/public/index.html
@@ -81,7 +81,7 @@
 <h1 id="heading"></h1>
 <h1 id="heading-1"></h1>
 <hr>
-<p><a href="https://www.facebook.com/creepycat.py"><img src="https://img.icons8.com/ios/50/000000/facebook-new.png" alt="Facebook"></a>
+<p><a href="https://www.facebook.com/creepycat.py"><img src="https://img.icons8.com/?size=64&amp;id=118562&amp;format=png&amp;color=000000" alt="Facebook"></a>
 <a href="https://github.com/Cyniez"><img src="https://img.icons8.com/?size=64&amp;id=118557&amp;format=png&amp;color=000000" alt="GitHub Logo"></a></p>
 <hr>
 <h6 id="made-with--from-">Made with ❤️ from 🇧🇩</h6>
