add color to text

--- a/Cyiwdio/public/radio/index.html
+++ b/Cyiwdio/public/radio/index.html
@@ -6,13 +6,13 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/png" href="http://localhost:1313/favicon.ico" />
-<meta property="og:url" content="http://localhost:1313/categories/">
+<meta property="og:url" content="http://localhost:1313/radio/">
   <meta property="og:site_name" content="Cyiwdio">
-  <meta property="og:title" content="Categories">
+  <meta property="og:title" content="Radios">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
-<title>Cyiwdio | Categories</title>
+<title>Cyiwdio | Radios</title>
 
     <link rel="stylesheet" href="/css/main.css">
   
